# C-_CMake_gtest-boilerplate

./: CMakeLists.txt  README.md  main.cpp
Library_name/: CMakeLists.txt
Library_name/include/: lib.hpp
Library_name/src/: lib.cpp
Library_name_test/: CMakeLists.txt
Library_name_test/basic_tests/: CMakeLists.txt  test.cpp
